--- a/api_gateway/src/main/resources/webroot/assets/view/initial_page.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/initial_page.html
@@ -1,11 +1,9 @@
 <div class="set_backgroud_full_screen_img">
-        <div class="container_center_div theme-showcase" role="main">
-                <div align="center" class="jumbotron">
-                        <h1 style="color: white" >COFFE LPA</h1>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <h2 style="color: white">Please Login/Register Account!</h2>
-                </div>              
-              </div>
+	<div align="center" class="jumbotron">
+		<h1 style="color: white" >COFFE LPA</h1>
+        <p></p>
+        <p></p>
+        <p></p>
+        <h2 style="color: white">Please <a style="color: white;" href="#/login">Login</a>/<a style="color: white;" href="#/registo">Register</a> Account!</h2>
+    </div>              
 </div>
