#get menus and reporting
Add microservice with menus and reporting. Reporting i don't test yet

--- a/api_gateway/src/main/resources/webroot/assets/css/style.css
+++ b/api_gateway/src/main/resources/webroot/assets/css/style.css
@@ -94,6 +94,9 @@ textarea{
   border-radius: 50%;
   animation: shadow-pulse 1s infinite;
   text-decoration: none;
+  background-image: url("/img/table.jpg");
+  
+  
 }
 
 
