--- a/api_gateway/src/main/resources/webroot/assets/view/main.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/main.html
@@ -4,7 +4,12 @@
 			<div ng-repeat="product in products">
 				<a ng-click="get_all_products(product.id)" class="list-group-item list-group-item-action bg-light">{{product.product}}</a>
 			</div>
+			<div id="categorias_format" >Menus</div>  
+			<div ng-repeat="menu in menus">
+				<a color="black" ng-click="get_all_menus(menu.id)" class="list-group-item list-group-item-action bg-light">{{menu.descri}}</a>
+			</div>
     </div>
+	
 	<div>
 	<div align="left" id="sidebar-mesa">
 	<form id="paper" method="get" action="">	
