--- a/api_gateway/src/main/resources/webroot/assets/css/style.css
+++ b/api_gateway/src/main/resources/webroot/assets/css/style.css
@@ -94,7 +94,7 @@ textarea{
   border-radius: 50%;
   animation: shadow-pulse 1s infinite;
   text-decoration: none;
-  background-image: url("/img/table.jpg");
+  background-image: url("/img/table.png");
   
   
 }
