--- a/api_gateway/src/main/resources/webroot/assets/view/main.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/main.html
@@ -1,31 +1,27 @@
 <div class="set_backgroud_full_screen_img">
-	<div id="sidebar-wrapper">       
-		<div id="categorias_format" >Products</div>    
-			<div ng-repeat="product in products">
-				<a ng-click="get_all_products(product.id)" class="list-group-item list-group-item-action bg-light">{{product.product}}</a>
-			</div>
-			<div id="categorias_format" >Menus</div>  
-			<div ng-repeat="menu in menus">
-				<a color="black" ng-click="get_all_menus(menu.id)" class="list-group-item list-group-item-action bg-light">{{menu.descri}}</a>
-			</div>
+    <div id="sidebar-wrapper">       
+        <div id="categorias_format" >Products</div>    
+        <div ng-repeat="product in products">
+            <a ng-click="get_all_products(product.id)" class="list-group-item list-group-item-action bg-light">{{product.product}}</a>
+        </div>
+        <div id="categorias_format" >Menus</div>  
+        <div ng-repeat="menu in menus">
+            <a color="black" ng-click="get_all_menus(menu.id)" class="list-group-item list-group-item-action bg-light">{{menu.descri}}</a>
+        </div>
     </div>
-	
-	<div>
-	<div align="left" id="sidebar-mesa">
-	<form id="paper" method="get" action="">	
-		<textarea rows='40' placeholder='Products by table'></textarea>
-		<input id="buttonMesa" type="submit" value="Pay build">
-	</form>
-</div>
-	<div id="wrapper">    
-				<div ng-repeat="table in tables">
-				<a ng-click="get_all_tables(table.id)" class="example-1">{{table.table}}</a>
-			</div>
-	</div>
-
-
-
-</div>
+    <div>
+        <div align="left" id="sidebar-mesa">
+            <form id="paper" method="get" action="">	
+                <textarea rows='40' placeholder='Products by table'></textarea>
+                <input id="buttonMesa" type="submit" value="Pay build">
+            </form>
+        </div>
+        <div id="wrapper">    
+            <div ng-repeat="table in tables">
+                <h1><a ng-click="get_all_tables(table.id)" class="example-1"><b>{{table.id}}</b></a></h1>
+            </div>
+        </div>
+    </div>
 </div>
 
 
