--- a/api_gateway/src/main/resources/webroot/assets/view/main.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/main.html
@@ -18,7 +18,7 @@
         </div>
         <div id="wrapper">    
             <div ng-repeat="table in tables">
-                <h1><a ng-click="get_all_tables(table.id)" class="example-1"><b>{{table.id}}</b></a></h1>
+                <h1><a ng-click="get_all_tables(table)" class="example-1"><b>{{table.id}}</b></a></h1>
             </div>
         </div>
     </div>
