--- a/api_gateway/src/main/resources/webroot/assets/view/main.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/main.html
@@ -11,7 +11,7 @@
     </div>
     <div>
         <div align="left" id="sidebar-mesa">
-            <form id="paper" method="get" action="pay.html">	
+            <form id="paper" method="get" action="#/pay.html">	
                 <textarea rows='33' id="texSide" placeholder='Products by table'></textarea>
                 <input id="buttonMesa" type="submit" value="Pay build">
             </form>
