--- a/api_gateway/src/main/resources/webroot/assets/view/pay.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/pay.html
@@ -1,5 +1,5 @@
 <div class="set_backgroud_full_screen_img">
-    <div class="container_center_div theme-showcase" role="main" ng-controller="RegistoCtrl">
+    <div class="container_center_div theme-showcase" role="main">
         <div align="center" class="jumbotron">
             <h2 style="color: white">Pay</h2>
             <form class="form-horizontal" role="form">
