--- a/api_gateway/src/main/resources/webroot/assets/view/pay.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/pay.html
@@ -1,25 +1,25 @@
 <div class="set_backgroud_full_screen_img">
-    <div class="container_center_div theme-showcase" role="main">
+    <div class="container_center_div theme-showcase" role="main" ng-controller="PayCtrl">
         <div align="center" class="jumbotron">
             <h2 style="color: white">Pay</h2>
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label style="color: white" >Table</label>
-                    <input class="form-control" type="text" ng-model="pay.table" required />
+                    <input class="form-control" type="text" ng-model="payBD.table" required />
                 </div>
                 <div class="form-group">
                     <label style="color: white">Name of client:</label>
-                    <input class="form-control" type="name" ng-model="pay.name" required />
+                    <input class="form-control" type="text" ng-model="payBD.name" required />
                 </div>
                 <div class="form-group">
                     <label style="color: white" >NIF:</label>
-                    <input class="form-control" type="NIF" ng-model="pay.NIF" required />
+                    <input class="form-control" type="text" ng-model="payBD.NIF" required />
                 </div>
                 <div class="form-group">
                     <label style="color: white" >Total:</label>
-                    <input class="form-control" type="totalPay" ng-model="pay.totalPay" required />
+                    <input class="form-control" type="text" ng-model="payBD.totalPay" required />
                 </div>
-                <button class="btn btn-primary" id="add-new-btn" ng-click="add_new_pay(pay)">Pay build!</button>
+                <button class="btn btn-primary" id="add-new-btn" ng-click="add_new_pay(payBD)">Pay build!</button>
                 <a href="#/main" style="color: white" class="btn">Cancel</a>
             </form>
         </div>
