#pass information to pay.html

--- a/api_gateway/src/main/resources/webroot/assets/view/main.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/main.html
@@ -18,7 +18,7 @@
         <div align="left" id="sidebar-mesa">
             <form id="paper" method="get" action="#/pay">	
                 <textarea rows='33' id="texSide" placeholder='Products by table'></textarea>
-                <input id="buttonMesa" ng-click="deleteAndPassInfo" type="submit" value="Pay build">
+                <input id="buttonMesa" ng-click="deleteAndPassInfo()" type="submit" value="Pay build">
             </form>
         </div>
         <div id="wrapper">    
