--- a/api_gateway/src/main/resources/webroot/assets/view/pay.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/pay.html
@@ -5,19 +5,23 @@
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label style="color: white" >Table</label>
-                    <input class="form-control" type="text" ng-model="payBD.table" required />
+                    <input class="form-control" id="tablePay" ng-model="payBD.table" />
+                </div>
+                <div class="form-group">
+                    <label style="color: white" >Products buy</label>
+                    <input class="form-control" id="productsPay" ng-model="payBD.products" placeholder='adsa' />
                 </div>
                 <div class="form-group">
                     <label style="color: white">Name of client:</label>
-                    <input class="form-control" type="text" ng-model="payBD.name" required />
+                    <input class="form-control" ng-model="payBD.name" required />
                 </div>
                 <div class="form-group">
                     <label style="color: white" >NIF:</label>
-                    <input class="form-control" type="text" ng-model="payBD.NIF" required />
+                    <input class="form-control" ng-model="payBD.NIF" required />
                 </div>
                 <div class="form-group">
                     <label style="color: white" >Total:</label>
-                    <input class="form-control" type="text" ng-model="payBD.totalPay" required />
+                    <input class="form-control" id="totalPay" ng-model="payBD.totalPay" value="hoenads"/>
                 </div>
                 <button class="btn btn-primary" id="add-new-btn" ng-click="add_new_pay(payBD)">Pay build!</button>
                 <a href="#/main" style="color: white" class="btn">Cancel</a>
